--- a/styleSheet.css
+++ b/styleSheet.css
@@ -8,10 +8,16 @@ body {
 .main-container {
     justify-content: center;
     align-items: center;
-    min-height: 85vh;
-    margin: 0%;
+    margin-top: 25%;
     padding: 0%;
     display: flex;
+}
+
+.sub-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
 }
 
 
@@ -29,7 +35,7 @@ h2 {
 
 input {
 
-    width: 200px;
+    width: 230px;
     height: 40px;
     border: none;
     border-radius: 10px;
@@ -48,32 +54,58 @@ input {
     padding-left: 10px;
 }
 
-button {
+.PwGenBtn {
     
     width: 200px;
     height: 40px;
     border: none;
     border-radius: 10px;
-    margin-left: 20px;
     font-size: 16px;
     background-color: green;
     color: white; 
     box-shadow: 0px 0px 20px rgb(15, 138, 179);
 }
 
-button:hover{
+.PwGenBtn:hover{
     background-color:  #FFA500;
     color: white;
+    
 }
 
-footer {
-    margin-bottom: 0px;
+.copyBtn{
+    width: 50px;
+    height: 40px;
+    border: none;
+    border-radius: 10px;
+    margin-left: 7px;
+    font-size: 19px;
+    background-color: rgb(29, 111, 218);
     color: white;
-    text-align: center;
+    box-shadow: 0px 0px 20px rgb(15, 160, 179);
+}
+
+.copyBtn:hover{
+    background-color:  #ffffff;
+    color: rgb(0, 0, 0);
+}
+
+.footer_txt {
+    position:absolute;                 
+            bottom:0; 
+            left: 2%;  
+    justify-content: center; 
+    text-align: center;                     
+    color: white;
     font-weight: bold;
+    margin-bottom: 2%;
+}
+
+.profile {
+    text-decoration: none;
+    color: red;
 }
 
 a {
     text-decoration: none;
-    color: red;
+    color: white;
 }
