--- a/styleSheet.css
+++ b/styleSheet.css
@@ -8,7 +8,7 @@ body {
 .main-container {
     justify-content: center;
     align-items: center;
-    margin-top: 25%;
+    margin-top: 20%;
     padding: 0%;
     display: flex;
 }
@@ -21,6 +21,13 @@ body {
 }
 
 
+.input-container{
+    width: max-content;
+    height: max-content;
+    box-shadow: 0px 0px 20px red;
+    border-radius: 10px;
+
+}
 
 
 h2 {
@@ -34,19 +41,18 @@ h2 {
 }
 
 input {
-
     width: 230px;
     height: 40px;
     border: none;
-    border-radius: 10px;
-    padding-right: 15px;
-    box-shadow: 0px 0px 20px red,
-    inset 5px 5px 10px #888888;
+    border-radius: 10px 0px 0px 10px;
+    box-shadow: 0px 0px 0px white,
+         inset 5px 5px 10px #888888;
     font-size: 16px;
-    padding-left: 10px;
     text-align: center;
-    
+}
 
+input:focus { 
+    outline: none !important;
 }
 
 ::placeholder{
@@ -56,7 +62,7 @@ input {
 
 .PwGenBtn {
     
-    width: 200px;
+    width: 280px;
     height: 40px;
     border: none;
     border-radius: 10px;
@@ -73,20 +79,19 @@ input {
 }
 
 .copyBtn{
-    width: 50px;
-    height: 40px;
+    width: 53px;
+    height: 43px;
     border: none;
-    border-radius: 10px;
-    margin-left: 7px;
+    margin-left: -5px;
+    border-radius: 0px 10px 10px 0px;
     font-size: 19px;
     background-color: rgb(29, 111, 218);
     color: white;
-    box-shadow: 0px 0px 20px rgb(15, 160, 179);
 }
 
 .copyBtn:hover{
     background-color:  #ffffff;
-    color: rgb(0, 0, 0);
+    color: rgb(29, 111, 218);
 }
 
 .footer_txt {
